2000-01-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.13

2000-01-19  olicha <olivier.chapuis@free.fr>

	* screenshots/index.html:
	* screenshots/Olivier_Chapuis-panel{down,up}-{800x600,thumbnail}.gif:
	Addeed two screenshots in one

2000-01-12  Dan Espen  <dane@mk.telcordia.com>

	* icons.html: Add second banner file to table.

2000-01-08  Mikhael Goikhman  <migo@homemail.com>

	* screendhots: added Jason Kibblewhite's screentshot
	* fvwm-cats/index.html: fixed the title and bad html

1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.12

1999-12-27  olicha <olivier.chapuis@free.fr>

	* fvwm-cats: Added lili.

1999-12-17  Mikhael Goikhman  <migo@homemail.com>

	* index.html: changed fvwm-cats/ link to be relative

	* fvwm-cats/index.html:
	* fvwm-cats/murzilka.jpg:
	added Murzilka's cat entry

	* screenshots/index.html: renamed from screenshots/screenshots.html
	* screenshots/Mikhael-desk-{1152x864,thumbnail}.gif:
	a slightly updated version of the desktop screenshot

1999-12-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.11

1999-12-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html:
	fixed typo

1999-12-07  Mikhael Goikhman  <migo@homemail.com>

	* index.html: removed html tag 'MULTICOL' screwing the layout,
	added missing '</blockquote>', some rewording
	* cvs.html: removed "-b -B" option advise from "cvs diff"

	* vector-buttons/DecorDemo2.{fvwmrc,gif}:
	improved diagonal-arrow buttons, changed order of buttons
	* vector-buttons/testbed.fvwmrc:
	Added missing 'Read'; commented out 'Mouse' lines (these global
	binding changes are superfluous); added 'MWMBorder, HandleWidth 10'
	to demo style.

1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html:
	* index.html:
	set stable version to 2.2.4

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.10
