@@ -159,6 +159,16 @@ She likes mouses but I have a touch pad ...
 </TD></TR></TABLE>
 
 <P><HR WIDTH="90%">
+<P><FONT SIZE=+2>Brad's cat:</FONT>
+
+<P><TT><FONT COLOR="#FF0000"><FONT SIZE=+2><B>Blaise</B></FONT></FONT></TT>
+<BR>You guessed it Blaise after Blaise Pascal, what else would you expect from
+a programmer, and a math loving wife.  Blaise is in her usual spot waiting for
+dinner, she is good at telling time her clock is just an hour fast.
+<BR><IMG SRC="blaise.jpg" VSPACE=2 BORDER=3 HEIGHT=240 WIDTH=320>
+<BR>
+
+<P><HR WIDTH="90%">
 
 <P><FONT COLOR="#33FF33"><FONT SIZE=+2>What we love about our cats:</FONT></FONT>
 <UL>
