@@ -1,3 +1,8 @@
+2000-02-04  Brad Giaccio  <bgiaccio@psrw.com>
+
+	* fvwm-cats/index.html:
+	* fvwm-cats/blaise.jpg: added my little girl
+
 2000-01-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* download.html: increased version number to 2.3.13
